# MCP_Server_for_papers

./: .env.example  .gitignore  README.md  README_zh.md  TODO.txt  config.py  main.py  mcp_servers.json  mcp_servers.yaml  pyproject.toml  requirements.txt  run_web.py  skill.json
rag/: __init__.py  mcp_server.py
rag/core/: __init__.py  logging.py  observability.py
rag/evaluation/: README.md  README_zh.md  __init__.py  retrieval_quality.py  run_retrieval_eval.py
rag/evaluation/data/: retrieval_eval.sample.jsonl
rag/finetune/: README.md  README_zh.md  build_hyde_dataset.py  evaluate_hyde_recall.py  train_hyde_lora.py
rag/plugins/: __init__.py  hyde.py  pdf_parser.py  summary_model.py
rag/storage/: __init__.py  migrations.py  model_manager.py  paper_manager.py  sqlite_store.py  vector_store.py
rag/tools/: __init__.py  base.py  jobs.py  paper_tools.py  security.py
scholar_agent/: __init__.py  config.py  mcp_client.py  mcp_server.py  prompts.py
scholar_agent/agents/: __init__.py  executor.py  graph.py  planning.py  progress.py  service.py  state.py  supervisor.py  synthesis.py  utils.py
scholar_agent/agents/experts/: __init__.py  code_builder.py  database_manager.py  literature.py  methodology.py  summarizer.py  writing_editor.py
scholar_agent/core/: __init__.py  logging.py  runtime.py
scholar_agent/plugins/: __init__.py  arxiv_search.py  hyde.py  pdf_parser.py
scholar_agent/skills/: __init__.py  base.py  loader.py
scholar_agent/storage/: __init__.py  memory_store.py  paper_manager.py  sqlite_store.py  vector_store.py
scholar_agent/tools/: __init__.py  base.py  code_tools.py  paper_tools.py  registry.py  writing_tools.py
scholar_agent/web/: __init__.py  server.py
scholar_agent/web/static/: app.js  index.html  styles.css
skills/example/: SKILL.md
tests/: run_agent_workflow_checks.py  test_agent_workflow_routing.py  test_e2e_smoke.py  test_hyde_backends.py  test_hyde_llamafactory_scripts.py  test_jobs_observability.py  test_mcp_config.py  test_mcp_contract.py  test_mcp_tool_errors.py  test_model_manager.py  test_paper_manager_batch.py  test_paper_tools_lightweight.py  test_retrieval_quality_eval.py  test_runtime_paths.py  test_skill_loader.py  test_summary_model.py  test_vector_store_lazy_reranker.py
