[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scholar-agent"
version = "0.1.0"
description = "Local multi-agent academic research assistant with paper retrieval, code reproduction, writing tools, Web UI, and MCP integration."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "ScholarAgent Contributors" },
]
keywords = [
    "academic-research",
    "llm-agent",
    "langgraph",
    "mcp",
    "paper-search",
    "arxiv",
    "rag",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "python-dotenv>=1.0",
    "pydantic>=2.7",
    "PyYAML>=6.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "langchain-text-splitters>=0.2",
    "langgraph>=0.2",
    "mcp>=1.0",
    "arxiv>=2.1",
    "certifi>=2024.2",
    "python-docx>=1.1",
    "PyMuPDF>=1.24",
    "marker-pdf>=1.0",
    "chromadb>=0.5",
    "FlagEmbedding>=1.2",
    "rank-bm25>=0.2",
    "jieba>=0.42",
    "transformers>=4.44",
    "scikit-learn>=1.4",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.8",
]

[project.urls]
Homepage = "https://github.com/your-org/scholar-agent"
Repository = "https://github.com/your-org/scholar-agent"

[project.scripts]
scholar-agent-mcp = "main:main"

[tool.setuptools.packages.find]
include = ["scholar_agent*"]

[tool.setuptools.package-data]
"scholar_agent.web.static" = ["*.html", "*.css", "*.js", "*.svg"]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    "workspace",
    "skills",
]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
exclude = [
    "workspace",
    "skills",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
